--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,15 +1,18 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto:400,500,7006&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
+
+/* ============== GLOBAL =============== */
 * {
   margin: 0;
   padding: 0;
-  outline: 0;
   box-sizing: border-box;
+  outline: 0;
 }
 
-body {
+html, body {
+  height: 100%;
   font: 400 14px Roboto, sans-serif;
-  background: #f0f0f5;
+  background-color: #f0f0f5;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -24,20 +27,34 @@ button {
 form input {
   width: 100%;
   height: 60px;
-  color: #333;
+  color: #333333;
   border: 1px solid #dcdce6;
   border-radius: 8px;
   padding: 0 24px;
 }
 
+form textarea {
+  width: 100%;
+  resize: vertical;
+  min-height: 140px;
+  height: 60px;
+  color: #333333;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 16px 24px;
+  line-height: 24px;
+}
+/* ================  ===================== */
+
+
 .button {
   width: 100%;
   height: 60px;
-  background: #e02041;
+  background-color: #e20041;
   border: 0;
-  border-radius: 8px;
-  color: #fff;
-  font-weight: 700;
+  border-radius: 6px;
+  color: #FFF;
+  font-weight: bold;
   margin-top: 16px;
   display: inline-block;
   text-align: center;
@@ -48,9 +65,8 @@ form input {
 }
 
 .button:hover {
-  filter: brightness(90%)
+  filter: brightness(90%);
 }
-
 
 .back-link {
   display: flex;
